--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies-list",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://thalalhassan.github.io/movie-list-app",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
